# fluent-python

./: .gitignore  README.md  pyproject.toml
data_structures/: augmented_assignment.py  tuples.py
special_methods/: vector.py
src/fluent_python/data_structures/: arrays.py  augmented_assignment.py  bisect.py  generators.py  memory_view.py  numpy_arrays.py  queues.py  slicing.py
src/fluent_python/special_methods/: card_deck.py
