[tool.poetry]
name = "toptal-interview"
version = "0.1.0"
description = ""
authors = ["Matheus Raposo <matheus_raposo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
